# codeanalyzer-rs

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: main.rs
src/.github/workflows/: release.yml
src/entities/: attr.rs  callable.rs  callsite.rs  dep.rs  gparam.rs  lifetime.rs  mod.rs  module.rs  param.rs  rcrate.rs  renum.rs  rimpl.rs  rmacro.rs  rstruct.rs  rtrait.rs  rtype.rs  safety.rs  variables.rs
